Fixed pre tag spacing

--- a/app/assets/stylesheets/songs.scss
+++ b/app/assets/stylesheets/songs.scss
@@ -62,11 +62,8 @@ input[aria-invalid='true'], textarea[aria-invalid='true'] {
 }
 
 pre {
-  white-space: pre-wrap; //css3
-  white-space: moz-pre-wrap; //firefox
-  white-space: -pre-wrap; //opera 4-6
-  white-space: -o-pre-wrap; //opera 7
   word-wrap: break-word; //internet explorer
+  white-space: pre-line;
 }
 
 .badge {
